fixed overflow css issue

--- a/src/components/building-blocks/report/Report.module.scss
+++ b/src/components/building-blocks/report/Report.module.scss
@@ -13,7 +13,7 @@
   .content {
     padding: 18px 24px;
     background: $background-color;
-    flex: 0 0 100%;
+    flex: 1 1 100%;
     border-radius: 10px;
 
     &__half {
